# corporate-niche-dynamics

./: .gitattributes  .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  report.md  requirements.txt
configs/: base.yaml  real.yaml  synthetic.yaml
docs/: data_dictionary.md  modeling_decisions.md  p10_reproducibility_followup_2026-07-23.md  p11e_alpha_power_diagnostic.md  p12e_power_calibration_preregistration.md  p12e_power_calibration_results.md  p13e_proxy_redesign_preregistration.md  p13f_proxy_redesign_corrected_preregistration.md  p13f_proxy_redesign_results.md  p14e_p7_eligibility_audit_preregistration.md  p14f_p7_eligibility_audit_corrected_preregistration.md  p14f_p7_eligibility_audit_results.md  p15e_proxy_power_calibration_preregistration.md  p15e_proxy_power_calibration_results.md  p16e_isolated_canary_preregistration.md  p16e_isolated_canary_results.md  p17e_isolated_cost_canary_preregistration.md  p17e_isolated_cost_canary_results.md  p18e_isolated_archetype_canary_preregistration.md  p18e_isolated_archetype_canary_results.md  p19e_final_closeout_preregistration.md  p19e_final_closeout_results.md  p20e_survival_utility_audit_protocol.md  p20e_survival_utility_results.md  p21e_measurement_utility_protocol.md  p21e_measurement_utility_results.md  point_in_time_policy.md  product_positioning.md  references.md  reproduction_guide.md  research_spec.md
hypercube/: __init__.py  availability.py  axes.py  canary.py  canary_costs.py  clustering.py  config.py  costs.py  data.py  diagnostics.py  dynamics.py  exploratory.py  labels.py  measurement_utility.py  portfolio.py  power_calibration.py  proxy_redesign.py  returns.py  run.py  standardize.py  survival.py  survival_utility.py  universe.py  viability.py  (+1 more)
(+254 files in other folders)
