[build-system]
requires = ["setuptools==80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "business-niche-hypercube"
version = "0.1.0"
description = "Auditable research framework for corporate competitive crowding and strategic change"
readme = "README.md"
requires-python = ">=3.11"
license = "LicenseRef-Proprietary"
license-files = ["LICENSE"]
authors = [{name = "Josh Gutierrez"}]
keywords = [
    "corporate strategy",
    "competitive crowding",
    "point-in-time finance",
    "synthetic benchmark",
    "reproducible research",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "numpy==2.3.1",
    "pandas==2.3.1",
    "pyarrow==20.0.0",
    "pydantic==2.11.7",
    "PyYAML==6.0.2",
    "scikit-learn==1.7.1",
    "scipy==1.16.0",
    "joblib==1.5.1",
    "statsmodels==0.14.5",
    "matplotlib==3.10.3",
    "Pillow==11.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.1",
]

[project.urls]
Homepage = "https://github.com/JoshGutierrez56/corporate-niche-dynamics"
Repository = "https://github.com/JoshGutierrez56/corporate-niche-dynamics"
Issues = "https://github.com/JoshGutierrez56/corporate-niche-dynamics/issues"

[project.scripts]
hypercube = "hypercube.run:main"

[tool.setuptools.packages.find]
include = ["hypercube*"]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
pythonpath = ["."]
testpaths = ["tests"]
